--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Project Cards Template | CodyHouse</title>
+	<title>Ellisa Issa</title>
 </head>
 <body>
 	<header>
-		<a href="#0" class="cd-logo"><img src="img/cd-logo.svg"></a>
+		<!-- <a href="#0" class="cd-logo"><img src="img/cd-logo.svg"></a> -->
 		
 		<button class="cd-nav-trigger">Menu<span aria-hidden="true" class="cd-icon"></span></button>
 	</header>
@@ -27,13 +27,14 @@
 			<li><a href="#0">Our projects</a></li>
 			<li><a href="#0">Contact us</a></li>
 		</ul>
-	</nav> <!-- .cd-primary-nav -->
+	</nav>
+	 <!-- .cd-primary-nav -->
 	
 	<div class="cd-projects-container">
 		<ul>
 			<li class="single-project">
 				<div class="cd-title">
-					<h2>Project 1</h2>
+					<h2>Project 1-BarU</h2>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
@@ -41,11 +42,11 @@
 					
 					<div class="content-wrapper">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam molestias suscipit mollitia vitae ea non ex, dignissimos aperiam minus magni totam sint culpa vel voluptate ipsa sunt repellendus. Ab, magni!
+							This was a group project done for the bootcamp that I attended. While the initial idea was mine I was happy to see how the idea evolved and changed as I worked with my group. 
 						</p>
 
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint illo error assumenda consequuntur qui inventore est, reiciendis nisi consequatur repudiandae eos tempora quia dolorum, quibusdam, autem aspernatur hic atque sunt facere! Aliquid dolorem, explicabo quisquam animi sunt ducimus officia odit expedita corrupti soluta culpa quas commodi assumenda, non perspiciatis? Quasi odio eveniet, totam in. Odio autem neque nobis tempora quis nisi illum enim velit atque placeat, quae obcaecati maiores doloremque pariatur, dolores in reiciendis ipsa! Aut, praesentium, quaerat! Amet eligendi, totam corporis doloremque commodi, neque, aperiam et doloribus nihil numquam, temporibus. Earum repellendus perferendis saepe officia voluptates temporibus dolore nostrum repudiandae nulla totam doloremque provident reiciendis facere, illo placeat at id. Non, atque. Quidem amet inventore, quos officia accusamus ipsam eaque facere eligendi. Harum id, atque ab. Ex dolor perferendis, sunt iste vitae repellat unde voluptatem obcaecati. Aperiam ullam quam sed incidunt optio eligendi enim dolorum, ipsam voluptate neque est ipsum assumenda autem laboriosam, deleniti. Accusantium dolores fugiat, nam quidem ab cumque rem veniam magnam voluptatibus, sapiente dolorem quaerat consectetur harum? Odit suscipit ipsa commodi aperiam a, iste architecto officia dignissimos repellendus ex! Iure ducimus laborum omnis aliquid nemo quos possimus, unde vero! Praesentium labore explicabo quae, iusto earum architecto quia, maxime recusandae quis necessitatibus quam temporibus, distinctio nesciunt culpa, tempore quas veniam ipsam doloremque voluptatum inventore ad quos minus voluptas eius. Sint, tenetur asperiores quod? Fuga dolores laborum possimus, animi perferendis neque suscipit nisi ipsa, sapiente ea itaque odit? Ullam esse maxime laudantium veritatis quasi omnis assumenda pariatur magnam quas ipsam, minima numquam nam iste amet facere velit sit dolor temporibus, harum incidunt id labore! Magnam voluptatibus praesentium deleniti architecto nobis consequatur accusamus, adipisci soluta quaerat earum natus, dolorem amet ullam ipsa repellat molestiae. Voluptatem ea, soluta, possimus vero, impedit quae laboriosam quod totam, ullam veritatis officia natus veniam!
+							
 						</p>
 
 						<p>
@@ -57,7 +58,7 @@
 
 			<li class="single-project">
 				<div class="cd-title">
-					<h2>Project 2</h2>
+					<h2>Project 2-DinGen</h2>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
@@ -81,7 +82,7 @@
 
 			<li class="single-project">
 				<div class="cd-title">
-					<h2>Project 3</h2>
+					<h2>Project 3-Weather API</h2>
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
