updated fonts and links

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
 	<nav class="cd-primary-nav">
 		<ul>
+			<a>Ellisa Issa</a>
 			<li class="cd-label">Check Me Out!</li>
 			<li><a href="https://www.linkedin.com/in/ellisa-issa/" target="_blank">LinkedIn</a></li>
 			<li><a href="https://github.com/ellisaissa" target="_blank">GitHub</a></li>
-			<li><a href = "mailto: ellisaissa@gmail.com">Contact Me</a></li>
+			<li><a href = "mailto: ellisaissa@gmail.com" target="_blank">Contact Me</a></li>
 		</ul>
 	</nav>
 	 <!-- .cd-primary-nav -->
