--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 						<p>
 							With this project I was on the front-end part of the team. I pair programmed to make the general layout, color scheme, and results pages. I also created the loading page.
-							<a href="https://baru-app.herokuapp.com/" target="_blank">Click to here see deployed project</a> 
+							<a href="https://baru-app.herokuapp.com/" target="_blank">Click here to see deployed project</a> 
 						</p>
 					</div>
 				</div> <!-- .cd-project-info -->
@@ -77,7 +77,7 @@
 
 						<p>
 							On this project I worked on the front-end. I helped create the modals and color scheme. I also made the social media for the project and connected the icons.
-							<a href="https://ellisaissa.github.io/DinGen-Web/" target="_blank">Click to here see deployed project</a> 
+							<a href="https://ellisaissa.github.io/DinGen-Web/" target="_blank">Click here to see deployed project</a> 
 						</p>
 					</div>
 				</div> <!-- .cd-project-info -->
@@ -94,7 +94,7 @@
 					<div class="content-wrapper">
 						<p>
 							This is a simple project made to look up the weather using a search tool and typing in the city. I did this project on my own. 
-							<a href="https://ellisaissa.github.io/weather-API/" target="_blank">Click to here see deployed project</a>
+							<a href="https://ellisaissa.github.io/weather-API/" target="_blank">Click here to see deployed project</a>
 						</p>
 					</div>
 				</div> <!-- .cd-project-info -->
